# ryoma

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OPEN_CATALOG_PR.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  TODOs.md  Untitled.ipynb  config.yaml  debug_cli.py  debug_detailed.py  example_config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  rxconfig.py  test_cli_fixed.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE.md  branch-protection.md  dependabot.yml
aita/: README.md  agent.py  pyproject.toml  state_store.py  states.py  tools.py  utils.py
aita/agent/: arrow_agent.py  base.py  factory.py  graph.py  ipython.py  pandas.py  pandas_agent.py  pyarrow.py  pyspark.py  python.py  python_agent.py  spark_agent.py  sql.py  utils.py  validator.py  workflow.py
aita/datasource/: base.py  bigquery.py  catalog.py  ds_ibis.py  factory.py  file.py  mysql.py  nosql.py  postgresql.py  snowflake.py  sql.py  sqlite.py
aita/prompt/: ExampleFormatTemplate.py  ExampleSelectorTemplate.py  PromptICLTemplate.py  PromptReprTemplate.py  base.py  builder.py  prompt_builder.py  prompt_template.py  utils.py
aita/prompt/templates/: dataset2.json  templates_parser.py
aita/tool/: __init__.py  base.py  factory.py  ipython.py  pandas.py  pandas_tool.py  pyarrow.py  pyarrow_tool.py  pyspark.py  pyspark_tool.py  python.py  python_tool.py  spark.py  spark_tool.py  sql.py  sql_tool.py
aita_lab/: aita_lab.py  cli.py  styles.py
aitalab/: aitalab.py  styles.py  testexample.py
alembic/: env.py
api/: .gitignore  Dockerfile  dataplatform.py  function_calls.py  main.py  metadb.py  models.py  requirements.txt  tools.py
app/: .gitignore  Dockerfile  celeryworker_pre_start.py  initial_data.py  models.py  pyproject.toml  utils.py
app/alembic/: env.py  script.py.mako
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: agent.py  autocomplete.py  chat.py  databases.py  datasource.py  datasources.py  favicon.py  health.py  login.py  tools.py  users.py  utils.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_database.py  crud_datasource.py  crud_user.py
app/db/: engine.py  init_db.py
app/schemas/: __init__.py  agent.py  chat.py  database.py  datasource.py  health.py  message.py  password.py  token.py  tool.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_users.py
app/tests/utils/: user.py  utils.py
app/ui/: middleware.ts  next.config.js  package.json
app/ui/app/: actions.ts
app/ui/app/(dashboard)/chat/components/: datasource-selector.tsx  message-interface.ts  model-selector.tsx  temperature-selector.tsx  tool-form.tsx  top-p-selector.tsx
app/ui/app/(dashboard)/chat/data/: models.ts
app/ui/app/(dashboard)/datasource/components/: cell-action.tsx
app/ui/app/api/auth/[...nextauth]/: route.ts
app/ui/components/forms/: user-auth-form.tsx  user-signup-form.tsx
app/ui/components/ui/: codeblock.tsx  hover-card.tsx
app/ui/constants/: data.ts
app/ui/hooks/: use-streamable-text.tsx
buildkite/: api.yaml  build_api.sh
dataapp/: Dockerfile  README.md  app.py  config.py  requirements.txt  utils.py
demo/: test.py
docs/: ARCHITECTURE_COMPARISON.md  INDEX.md  README.md  TEST_ORGANIZATION.md  roadmap.md
example/: azure_openai_agent.ipynb  basic_example.ipynb  (+8 more)
ryoma_ai/: .gitignore  README.md  pyproject.toml
ryoma_ai/ryoma_ai/agent/: arrow_agent.py  pandas_agent.py  python_agent.py  spark_agent.py  sql.py  validator.py  workflow.py
ryoma_ai/ryoma_ai/datasource/: base.py  bigquery.py  factory.py  file.py  metadata.py  mysql.py  nosql.py  postgres.py  postgresql.py  snowflake.py  sqlite.py
ryoma_ai/ryoma_ai/models/: agent.py
ryoma_ai/ryoma_ai/prompt/: ExampleSelectorTemplate.py  PromptReprTemplate.py  enums.py  prompt_builder.py  utils.py
ryoma_ai/ryoma_ai/tool/: spark_tool.py  sql_tool.py
ryoma_lab/: pyproject.toml  ryoma_lab.py  styles.py
ryoma_lab/apis/: catalog.py  datasource.py  experiement.py  kernel.py
ryoma_lab/components/: agent.py  catalog.py  cell.py  chat_navbar.py  embedding.py  file_directory_sidebar.py  model_selector.py  notebook.py  prompt_template.py  react_rnd.py  sidebar.py  table.py  tool.py  tool_kernel.py  upload.py  vector_store.py
ryoma_lab/models/: agent.py  cell.py  data_catalog.py  datasource.py  kernel.py  llm.py  prompt.py  vector_store.py
ryoma_lab/pages/: __init__.py  agent.py  ai.py  catalog.py  datasource.py  document.py  prompt_template.py  tool.py  vector_store.py  workspace.py
ryoma_lab/ryoma_lab/: cli.py
ryoma_lab/ryoma_lab/apis/: catalog.py  datasource.py  embedding.py  vector_store.py
ryoma_lab/ryoma_lab/apps/: app_factory.py
ryoma_lab/ryoma_lab/components/: catalog.py  cell.py  chat_navbar.py  embedding.py  file_directory_sidebar.py  model_selector.py  notebook.py  react_resizable_panels.py  react_rnd.py  sidebar.py  vector_store.py
ryoma_lab/ryoma_lab/components/workspace/: cell.py  file_directory_sidebar.py  notebook.py
ryoma_lab/ryoma_lab/models/: agent.py  cell.py  data_catalog.py  datasource.py  embedding.py  kernel.py  prompt.py  pythonkernel.py  sqlkernel.py  vector_store.py
ryoma_lab/ryoma_lab/pages/: __init__.py  ai.py  datasource.py  settings.py  workspace.py
ryoma_lab/ryoma_lab/services/: catalog.py  datasource.py  kernel.py  kernel_factory.py  prompt_template.py  sqlkernel.py  vector_store.py
ryoma_lab/ryoma_lab/services/kernel/: base.py  factory.py  service.py  sqlkernel.py
ryoma_lab/ryoma_lab/states/: agent.py  ai.py  base.py  catalog.py  chat.py  datasource.py  embedding.py  kernel.py  notebook.py  prompt_template.py  utils.py  vector_store.py  workspace.py
ryoma_lab/services/: file_manager.py  kernel.py  pythonkernel.py  vector_store.py
ryoma_lab/states/: AiState.py  agent.py  base.py  catalog.py  datasource.py  graph.py  kernel.py  llm_providers.py  notebook.py  prompt_template.py  test.py  tool.py  utils.py  vector_store.py  workspace.py
ryoma_lab/templates/: template.py
(+481 files in other folders)
