[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ryoma-dev"
version = "0.0.1"
description = "Root project for Ryoma AI Platform"
authors = ["ryoma <contact@project-ryoma.com>"]
license = "Apache Software License 2.0"
readme = "README.md"

packages = [
    { include = "ryoma_ai", from = "ryoma_ai" },
    { include = "ryoma_lab", from = "ryoma_lab" },
]

[tool.poetry.dependencies]
python = "^3.9"
pyupgrade = "^3.17.0"
ryoma_ai = {path = "./ryoma_ai", develop = true}
ryoma_lab = {path = "./ryoma_lab", develop = true}


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^23.3.0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^3.9.2"
click = "^8.0.0"
