[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]


[project]
name = "ryoma-dev"
version = "0.0.1"
description = "Root project for Ryoma AI Platform"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "ryoma_lab[snowflake, pyspark, postgres, sqlite, mysql, bigquery]",
    "ryoma_ai",
    "pytest >= 6.2.5",
    "black >= 23.3.0",
    "isort >= 5.9.3",
    "mypy >= 0.910",
    "flake8 >= 3.9.2",
    "click >= 8.0.0",
    "pip >= 21.3.1",
    "setuptools >= 58.0.4",
    "pyupgrade >= 2.26.0",
]

[tool.uv.sources]
ryoma_ai = { workspace = true}
ryoma_lab = { workspace = true}

[tool.uv.workspace]
members = ["packages/ryoma_ai", "packages/ryoma_lab"]

[tool.isort]
profile = "black"