[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]


[project]
name = "ryoma-dev"
version = "0.0.1"
description = "Root project for Ryoma AI Platform"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "ryoma_lab[snowflake, pyspark, postgres, sqlite, mysql, bigquery]",
    "ryoma_ai",
    "pytest >= 6.2.5",
    "black >= 23.3.0",
    "isort >= 5.9.3",
    "mypy >= 0.910",
    "flake8 >= 3.9.2",
    "click >= 8.0.0",
    "pip >= 21.3.1",
    "setuptools >= 58.0.4",
    "pyupgrade >= 2.26.0",
    "pytest-cov>=5.0.0",
    "openai-responses>=0.10.0",
    "coverage-badge>=1.1.2",
    "reflex-chakra>=0.7.0",
]

[tool.uv.sources]
ryoma_ai = { workspace = true}
ryoma_lab = { workspace = true}

[tool.uv.workspace]
members = ["packages/ryoma_ai", "packages/ryoma_lab"]

[tool.isort]
profile = "black"


[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--doctest-modules",
    "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "ryoma"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.10",
]
